@@ -1,5 +1,6 @@
 7 March 2012: Wouter
 	- print syntax error for url config items.
+	- skip_http control command.
 
 6 March 2012: Wouter
 	- Fix memleak in new config url content.
